[tool.poetry]
name = "streamlit-starter"
version = "0.1.0"
description = "Streamlit starter repo"
authors = ["Michael Wilt <michaeljwilt@outlook.com>"]
readme = "README.md"
packages = [{include = "streamlit_starter"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
streamlit = "^1.31.1"
streamlit-option-menu = "^0.3.12"
botocore = "^1.34.49"
plotly = "^5.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
